unpackaged/main/default/objects/Case/fields/Activation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Activation_Amount__c</fullName>
    <label>Activation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>