unpackaged/main/default/objects/Case/fields/Apex_Context__c.field-meta.xml
<CustomField>
    <fullName>Apex_Context__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apex Context</label>
    <type>Checkbox</type>
</CustomField>