unpackaged/main/default/objects/Case/fields/Balance_Paid__c.field-meta.xml
<CustomField>
    <fullName>Balance_Paid__c</fullName>
    <label>Balance Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>