unpackaged/main/default/objects/Case/fields/Balance_Remaining_for_Activation__c.field-meta.xml
<CustomField>
    <fullName>Balance_Remaining_for_Activation__c</fullName>
    <formula>IF(Activation_Amount__c - Balance_Paid__c &gt; 0, Activation_Amount__c - Balance_Paid__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Remaining for Activation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>