unpackaged/main/default/objects/Case/fields/Case_Activation__c.field-meta.xml
<CustomField>
    <fullName>Case_Activation__c</fullName>
    <label>Case Activation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>