unpackaged/main/default/objects/Case/fields/Case_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Reason__c</fullName>
    <label>Case Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>By Client for Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>DNR</fullName>
            </value>
            <value>
                <fullName>Due to Client Request</fullName>
            </value>
            <value>
                <fullName>Due to Non Communication</fullName>
            </value>
            <value>
                <fullName>Due to Non Compliance</fullName>
            </value>
            <value>
                <fullName>Due to Non Payment</fullName>
            </value>
            <value>
                <fullName>Financing Recourse</fullName>
            </value>
            <value>
                <fullName>Terminated By Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>