unpackaged/main/default/objects/Case/fields/Case_Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_First_Name__c</fullName>
    <label>Case Owner First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>