unpackaged/main/default/objects/Case/fields/Case_Owner_Signature__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Signature__c</fullName>
    <label>Case Owner Signature</label>
    <length>70000</length>
    <type>Html</type>
</CustomField>