unpackaged/main/default/objects/Case/fields/CaseNotesFilledDate__c.field-meta.xml
<CustomField>
    <fullName>CaseNotesFilledDate__c</fullName>
    <label>Case Notes Filled Date</label>
    <type>DateTime</type>
</CustomField>