unpackaged/main/default/objects/Case/fields/Days_Since_Last_Pre_Activation_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Pre_Activation_Follow_Up__c</fullName>
    <formula>IF(

 Last_Pre_Activation_Follow_Up_Sent_Date__c = NULL,  TODAY()-Pre_Activation_Date__c, TODAY()-Last_Pre_Activation_Follow_Up_Sent_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Pre-Activation Follow Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>