unpackaged/main/default/objects/Case/fields/DaysSinceLastOutreach__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceLastOutreach__c</fullName>
    <formula>TODAY() -  LastOutreachDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Outreach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>