unpackaged/main/default/objects/Case/fields/Enrolled_Agent__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrolled Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>