unpackaged/main/default/objects/Case/fields/First_Trade_POA_Submitted__c.field-meta.xml
<CustomField>
    <fullName>First_Trade_POA_Submitted__c</fullName>
    <label>First Trade POA Submitted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>