unpackaged/main/default/objects/Case/fields/First_Trade_POA_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Trade_POA_Submitted_Date__c</fullName>
    <label>First Trade POA Submitted Date</label>
    <type>Date</type>
</CustomField>