unpackaged/main/default/objects/Case/fields/Has_Business__c.field-meta.xml
<CustomField>
    <fullName>Has_Business__c</fullName>
    <label>Has Business?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>