unpackaged/main/default/objects/Case/fields/IRS_Representation_Re_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>IRS_Representation_Re_Closure_Date__c</fullName>
    <label>IRS Representation Re-Closure Date</label>
    <type>Date</type>
</CustomField>