unpackaged/main/default/objects/Case/fields/IRS_Representation_Reinstatement_Date__c.field-meta.xml
<CustomField>
    <fullName>IRS_Representation_Reinstatement_Date__c</fullName>
    <label>IRS Representation Reinstatement Date</label>
    <type>Date</type>
</CustomField>