unpackaged/main/default/objects/Case/fields/IsOppNotNull__c.field-meta.xml
<CustomField>
    <fullName>IsOppNotNull__c</fullName>
    <formula>NOT(ISBLANK( Opportunity__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOppNotNull</label>
    <type>Checkbox</type>
</CustomField>