unpackaged/main/default/objects/Case/fields/ITR_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>ITR_Close_Date__c</fullName>
    <label>ITR Close Date</label>
    <type>Date</type>
</CustomField>