unpackaged/main/default/objects/Case/fields/ITR_Id_formula__c.field-meta.xml
<CustomField>
    <fullName>ITR_Id_formula__c</fullName>
    <formula>Account.ITR_Id_formula__c</formula>
    <label>ITR ID</label>
    <type>Text</type>
</CustomField>