unpackaged/main/default/objects/Case/fields/Last_Calendar_Event__c.field-meta.xml
<CustomField>
    <fullName>Last_Calendar_Event__c</fullName>
    <description>Stores the date and time of the last event created</description>
    <label>Last Calendar Event</label>
    <type>DateTime</type>
</CustomField>