unpackaged/main/default/objects/Case/fields/Last_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Date__c</fullName>
    <description>Stores the date and time the last activity of type call was marked as completed</description>
    <label>Last Call Date</label>
    <type>DateTime</type>
</CustomField>