unpackaged/main/default/objects/Case/fields/Last_Pre_Activation_Follow_Up_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Pre_Activation_Follow_Up_Sent_Date__c</fullName>
    <label>Last Pre-Activation Follow Up Sent Date</label>
    <type>Date</type>
</CustomField>