unpackaged/main/default/objects/Case/fields/Last_SMS_Received__c.field-meta.xml
<CustomField>
    <fullName>Last_SMS_Received__c</fullName>
    <formula>Account.Last_SMS_Received_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last SMS Received</label>
    <type>Date</type>
</CustomField>