unpackaged/main/default/objects/Case/fields/Last_SMS_Text__c.field-meta.xml
<CustomField>
    <fullName>Last_SMS_Text__c</fullName>
    <label>Last SMS Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>