unpackaged/main/default/objects/Case/fields/LastOutreachDate__c.field-meta.xml
<CustomField>
    <fullName>LastOutreachDate__c</fullName>
    <label>Last Outreach Date</label>
    <type>Date</type>
</CustomField>