unpackaged/main/default/objects/Case/fields/Lead360RecordId__c.field-meta.xml
<CustomField>
    <fullName>Lead360RecordId__c</fullName>
    <label>Lead360RecordId</label>
    <length>36</length>
    <type>Text</type>
</CustomField>