unpackaged/main/default/objects/Case/fields/leads360_milestoneid__c.field-meta.xml
<CustomField>
    <fullName>leads360_milestoneid__c</fullName>
    <description>Used for Velocify Sales Flow</description>
    <label>leads360 milestoneid</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>