unpackaged/main/default/objects/Case/fields/Legacy_Case_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Case_Closed_Date__c</fullName>
    <description>Case closed date imported from Velocify</description>
    <label>Legacy Case Closed Date</label>
    <type>Date</type>
</CustomField>