unpackaged/main/default/objects/Case/fields/Next_Pre_Activation_Email__c.field-meta.xml
<CustomField>
    <fullName>Next_Pre_Activation_Email__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Next Pre-Activation Email</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>