unpackaged/main/default/objects/Case/fields/Percentage_Paid__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Paid__c</fullName>
    <formula>Balance_Paid__c / Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>