unpackaged/main/default/objects/Case/fields/POA_hit_CAF__c.field-meta.xml
<CustomField>
    <fullName>POA_hit_CAF__c</fullName>
    <label>POA hit CAF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>