unpackaged/main/default/objects/Case/fields/POA_hit_CAF_Date__c.field-meta.xml
<CustomField>
    <fullName>POA_hit_CAF_Date__c</fullName>
    <label>POA hit CAF Date</label>
    <type>Date</type>
</CustomField>