unpackaged/main/default/objects/Case/fields/POA_Rejected__c.field-meta.xml
<CustomField>
    <fullName>POA_Rejected__c</fullName>
    <label>POA Rejected?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>