unpackaged/main/default/objects/Case/fields/POA_Submitted_to_CAF_Date__c.field-meta.xml
<CustomField>
    <fullName>POA_Submitted_to_CAF_Date__c</fullName>
    <label>POA Submitted to CAF Date</label>
    <type>Date</type>
</CustomField>