unpackaged/main/default/objects/Case/fields/Pre_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Activation_Date__c</fullName>
    <label>Pre-Activation Date</label>
    <type>Date</type>
</CustomField>