unpackaged/main/default/objects/Case/fields/Representation_Re_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Representation_Re_Closure_Date__c</fullName>
    <label>Representation Re-Closure Date</label>
    <type>DateTime</type>
</CustomField>