unpackaged/main/default/objects/Case/fields/Representation_Reinstatement_Date__c.field-meta.xml
<CustomField>
    <fullName>Representation_Reinstatement_Date__c</fullName>
    <label>Representation Reinstatement Date</label>
    <type>DateTime</type>
</CustomField>