unpackaged/main/default/objects/Case/fields/Representation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Representation_Start_Date__c</fullName>
    <label>Representation Start Date</label>
    <type>Date</type>
</CustomField>