unpackaged/main/default/objects/Case/fields/Representation_Time__c.field-meta.xml
<CustomField>
    <fullName>Representation_Time__c</fullName>
    <formula>Opportunity__r.Total_Representation_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Representation Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>