unpackaged/main/default/objects/Case/fields/Sub_status__c.field-meta.xml
<CustomField>
    <fullName>Sub_status__c</fullName>
    <label>Sub-status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Info Submitted</fullName>
            </value>
            <value>
                <fullName>TPP Blocked</fullName>
            </value>
            <value>
                <fullName>Incorrect Font</fullName>
            </value>
            <value>
                <fullName>Intro Pending</fullName>
            </value>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>Ready for Yearly Tax Prep</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Non Communication</fullName>
                <label>Non-Communication</label>
            </value>
            <value>
                <fullName>Refuse Financing</fullName>
            </value>
            <value>
                <fullName>Terminated by Client</fullName>
            </value>
            <value>
                <fullName>Terminated by ITR</fullName>
            </value>
            <value>
                <fullName>DNR</fullName>
            </value>
            <value>
                <fullName>Tax Prep</fullName>
            </value>
            <value>
                <fullName>Due to Client Request</fullName>
            </value>
            <value>
                <fullName>Due to Non Payment</fullName>
            </value>
            <value>
                <fullName>Due to Non Compliance</fullName>
                <label>Due to Non-Compliance</label>
            </value>
            <value>
                <fullName>Completed/ Closed</fullName>
            </value>
            <value>
                <fullName>Completed/ Closed- DNR</fullName>
            </value>
            <value>
                <fullName>Attempting Contact</fullName>
            </value>
            <value>
                <fullName>Pitched Simmer</fullName>
            </value>
            <value>
                <fullName>Services Completed / Client DNS (Did Not Sign)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>