unpackaged/main/default/objects/Case/fields/TI_Completed__c.field-meta.xml
<CustomField>
    <fullName>TI_Completed__c</fullName>
    <label>TI Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>