unpackaged/main/default/objects/Case/fields/TI_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>TI_Completed_Date__c</fullName>
    <label>TI Completed Date?</label>
    <type>Date</type>
</CustomField>