unpackaged/main/default/objects/Case/fields/TI_PIF_Date__c.field-meta.xml
<CustomField>
    <fullName>TI_PIF_Date__c</fullName>
    <label>TI PIF Date</label>
    <type>Date</type>
</CustomField>