unpackaged/main/default/objects/Case/fields/TI_Type__c.field-meta.xml
<CustomField>
    <fullName>TI_Type__c</fullName>
    <label>TI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By CAF</fullName>
            </value>
            <value>
                <fullName>Manually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>