unpackaged/main/default/objects/Case/fields/Total_Representation_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Representation_Time__c</fullName>
    <label>Total Representation Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>