unpackaged/main/default/objects/Case/fields/TPP_Blocked__c.field-meta.xml
<CustomField>
    <fullName>TPP_Blocked__c</fullName>
    <label>TPP Blocked?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>