unpackaged/main/default/objects/Case/fields/TPP_Transcripts_Years__c.field-meta.xml
<CustomField>
    <fullName>TPP_Transcripts_Years__c</fullName>
    <label>TPP Transcripts Years</label>
    <length>100</length>
    <type>Text</type>
</CustomField>