unpackaged/main/default/objects/Case/fields/Updated_State_Balance__c.field-meta.xml
<CustomField>
    <fullName>Updated_State_Balance__c</fullName>
    <label>Updated State Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>