unpackaged/main/default/objects/Case/fields/Velocify_ID__c.field-meta.xml
<CustomField>
    <fullName>Velocify_ID__c</fullName>
    <formula>Opportunity__r.Velocify_Id__c</formula>
    <label>Velocify Id</label>
    <type>Text</type>
</CustomField>