unpackaged/main/default/objects/Case/recordTypes/Tax_Negotiation_Only_Case.recordType-meta.xml
<RecordType>
    <fullName>Tax_Negotiation_Only_Case</fullName>
    <active>true</active>
    <businessProcess>Tax Negotiation Only Case Process</businessProcess>
    <label>Tax Negotiation Only Case</label>
</RecordType>