unpackaged/main/default/objects/Case/recordTypes/Tax_Prep_and_Negotiation_Case.recordType-meta.xml
<RecordType>
    <fullName>Tax_Prep_and_Negotiation_Case</fullName>
    <active>true</active>
    <businessProcess>Tax Prep and Negotiation Case Process</businessProcess>
    <label>Tax Prep and Negotiation Case</label>
</RecordType>