unpackaged/main/default/objects/Case/recordTypes/Tax_Prep_Only_Case.recordType-meta.xml
<RecordType>
    <fullName>Tax_Prep_Only_Case</fullName>
    <active>true</active>
    <businessProcess>Tax Prep Only Case Process</businessProcess>
    <label>Tax Prep Only Case</label>
</RecordType>