unpackaged/main/default/objects/Case/recordTypes/TI_Follow_Up_Case.recordType-meta.xml
<RecordType>
    <fullName>TI_Follow_Up_Case</fullName>
    <active>true</active>
    <businessProcess>TI Follow Up Case Process</businessProcess>
    <label>TI Follow Up Case</label>
</RecordType>