unpackaged/main/default/objects/Case/validationRules/Pre_Activation_Owner_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Pre_Activation_Owner_Check</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(Status,&quot;Pre-Activation&quot;)||ISPICKVAL(Status,&quot;Activation Call&quot;) )&amp;&amp;  Owner:Queue.Id !=null</errorConditionFormula>
    <errorMessage>User is a queue, update owner to a user in order to move to Pre-Activation/Activation Call</errorMessage>
</ValidationRule>