unpackaged/main/default/objects/Case/listViews/Enrolled_Agents_Queue_Alix_Luhonda.listView-meta.xml
<ListView>
    <fullName>Enrolled_Agents_Queue_Alix_Luhonda</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Opportunity__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <columns>Enrolled_Agent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enrolled_Agent__c</field>
        <operation>equals</operation>
        <value>Alix Luhonda</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Case Completed Successful,Case Completed Failed,Case Closed</value>
    </filters>
    <label>Enrolled Agents Queue (Alix Luhonda)</label>
</ListView>