unpackaged/main/default/objects/Case/listViews/Intro_Pending_Cases.listView-meta.xml
<ListView>
    <fullName>Intro_Pending_Cases</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 AND 6)</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Opportunity__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <columns>Enrolled_Agent__c</columns>
    <columns>LastOutreachDate__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Intro Call</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notEqual</operation>
        <value>Gabriela Fernandez</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notEqual</operation>
        <value>Firian Martinez</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notEqual</operation>
        <value>Eriksson Morales</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Enrolled_Agent__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Intro Call Cases</label>
    <sharedTo>
        <group>ITR_Processing</group>
    </sharedTo>
</ListView>